--- a/data/locale.yaml
+++ b/data/locale.yaml
@@ -32,5 +32,11 @@ filters:
     happening: Activities
     people: People
 
+ui:
+    select_one: only
+    select_all: Show All
+    select_dates: Select Dates
+
+
 message:
     nodata: <em class="blank">Not Reported</em>
