--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "vinyl-buffer": "~1.0.0",
     "vinyl-source-stream": "~1.0.0",
     "gulp-util": "~3.0.3",
-    "gulp-add-src": "~0.2.0",
     "gulp-concat-css": "~2.1.0",
     "watchify": "~2.3.0",
     "gulp-sourcemaps": "~1.3.0",
@@ -19,7 +18,10 @@
     "browserify": "~8.1.3",
     "gulp-sass": "~1.3.3",
     "brfs": "~1.3.0",
-    "crx": "~3.0.2"
+    "crx": "~3.0.2",
+    "gulp-template-compile": "~0.2.1",
+    "gulp-concat": "~2.4.3",
+    "gulp-gh-pages": "~0.4.0"
   },
   "dependencies": {
     "backbone": "^1.1.2",
@@ -32,7 +34,7 @@
   "scripts": {
     "start": "gulp",
     "build": "gulp build",
-    "lint": "jshint js/mapfilter",
+    "lint": "jshint js/mapfilter"
   },
   "jshintConfig": {
     "globals": {
