--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "vinyl-source-stream": "~1.0.0",
     "gulp-util": "~3.0.3",
     "gulp-concat-css": "~2.1.0",
-    "watchify": "~2.3.0",
+    "watchify": "^3.1.1",
     "gulp-sourcemaps": "~1.3.0",
     "gulp": "~3.8.11",
     "gulp-connect": "~2.2.0",
