--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "gulp-sourcemaps": "~1.3.0",
     "gulp": "~3.8.11",
     "gulp-connect": "~2.2.0",
-    "browserify": "~8.1.3",
-    "gulp-sass": "~1.3.3",
+    "browserify": "^9.0.8",
     "brfs": "~1.3.0",
     "crx": "~3.0.2",
     "gulp-template-compile": "~0.2.1",
