--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "backbone-github": "git://github.com/digidem/backbone-github",
     "crossfilter": "^1.3.11",
     "d3": "3",
+    "jquery": "^2.1.4",
     "leaflet": "^0.7.3",
     "lodash": "^3.1.0"
   },
