--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "postcss-cli": "^1.3.1",
     "postcss-import": "^5.2.2",
     "postcss-url": "^3.2.0",
-    "rimraf": "^2.3.4"
+    "rimraf": "^2.3.4",
+    "standard": "^4.0.1"
   },
   "dependencies": {
     "backbone": "^1.1.2",
@@ -39,7 +40,8 @@
     "build:js": "browserify js/index.js -t [ jstify --engine lodash ] | uglifyjs -mc > dist/bundle.js",
     "deploy": "buildbranch gh-pages dist",
     "predeploy": "npm run build:web",
-    "build:chrome": "copyup chrome/* dist && crx pack dist -o dist/mapfilter.crx"
+    "build:chrome": "copyup chrome/* dist && crx pack dist -o dist/mapfilter.crx",
+    "test": "standard js/mapfilter/*.js"
   },
   "jshintConfig": {
     "globals": {
