--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^5.2.0",
-    "bistre": "^1.0.1",
     "brfs": "~1.3.0",
     "browserify": "^9.0.8",
     "budo": "^4.0.0",
     "buildbranch": "0.0.3",
     "copyfiles": "^0.2.1",
     "crx": "~3.0.2",
+    "garnish": "^2.1.3",
     "jstify": "^0.9.0",
     "mkdirp": "^0.5.1",
     "opnr": "^1.0.4",
@@ -32,8 +32,8 @@
   },
   "scripts": {
     "dev": "budo js/index.js:bundle.js --dir dist --live -- -t [ jstify --engine lodash ]",
-    "open": "npm run dev | opnr | bistre",
-    "start": "npm run dev | bistre",
+    "open": "npm run dev | opnr | garnish",
+    "start": "npm run dev | garnish",
     "build:web": "copyfiles index.html dist && npm run build:css && npm run build:js",
     "prebuild:web": "rimraf dist && mkdirp dist",
     "build:css": "postcss --use postcss-import --use autoprefixer --use postcss-url --postcss-url.url inline css/index.css > dist/bundle.css",
