MapFilter made compatible with file_odk
This was demonstrated at the FPP CBMIS summit in Charney Bassett.
Build MapFilter and copy the contents of the dist folder into
/mapfilter under file_odk. This includes some changes to the
Wapichan hard coding to handle a demo form used in the exercise.

--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
   "lab.digital-democracy.org": {
-    "dataUrl": "https://github.com/digidem/sample-monitoring-data/tree/master/submissions/monitoring.geojson",
+    "dataUrl": "/json/Monitoring.json",
     "auth": false
   },
   "monitoring.wapichanao.org": {
-    "dataUrl": "https://github.com/digidem/wapichanao-data/tree/master/submissions/monitoring.geojson",
-    "auth": true
+    "dataUrl": "/json/Monitoring.json",
+    "auth": false
   },
   "localhost": {
-    "dataUrl": "https://github.com/digidem/wapichanao-data/tree/master/submissions/monitoring.geojson",
-    "auth": true
+    "dataUrl": "/json/Monitoring.json",
+    "auth": false
   }
 }
