--- a/package.json
+++ b/package.json
@@ -1,54 +1,107 @@
 {
-  "name": "Monitoring-app",
-  "version": "0.2.2",
-  "description": "An app for viewing monitoring data",
-  "license": "MIT",
-  "devDependencies": {
-    "autoprefixer": "^5.2.0",
-    "brfs": "~1.3.0",
-    "browserify": "^9.0.8",
-    "budo": "^4.0.0",
-    "buildbranch": "0.0.3",
-    "copyfiles": "^0.2.1",
-    "crx": "~3.0.2",
-    "garnish": "^2.1.3",
-    "jstify": "^0.9.0",
-    "mkdirp": "^0.5.1",
-    "opnr": "^1.0.4",
-    "postcss-cli": "^1.3.1",
-    "postcss-import": "^5.2.2",
-    "postcss-url": "^3.2.0",
-    "rimraf": "^2.3.4",
-    "standard": "^4.0.1"
-  },
-  "dependencies": {
-    "backbone": "^1.1.2",
-    "crossfilter": "^1.3.11",
-    "d3": "3",
-    "jquery": "^2.1.4",
-    "leaflet": "^0.7.3",
-    "lodash": "^3.1.0",
-    "octokat": "^0.4.10"
-  },
-  "scripts": {
-    "dev": "budo js/index.js:bundle.js --dir dist --live -- -t [ jstify --engine lodash ]",
-    "open": "npm run build:dev && npm run dev | opnr | garnish",
-    "start": "npm run build:dev && npm run dev | garnish",
-    "build:dev": "copyfiles index.html dist && npm run build:css",
-    "build:web": "npm run build:dev && npm run build:js",
-    "prebuild:web": "rimraf dist && mkdirp dist",
-    "build:css": "postcss --use postcss-import --use autoprefixer --use postcss-url --postcss-url.url inline css/index.css > dist/bundle.css",
-    "build:js": "browserify js/index.js -t [ jstify --engine lodash ] | uglifyjs -mc > dist/bundle.js",
-    "deploy": "buildbranch gh-pages dist",
-    "predeploy": "npm run build:web && copyfiles CNAME dist",
-    "build:chrome": "copyup chrome/* dist && crx pack dist -o dist/mapfilter.crx",
-    "test": "standard",
-    "patch": "npm version patch && git push --follow-tags"
-  },
-  "standard": {
-    "ignore": [
-      "js/lib/**",
-      "dist/**"
-    ]
-  }
+    "app_name": "mapfilter", 
+    "nodejs": true, 
+    "additional_trust_anchors": "", 
+    "inject-js-end": "", 
+    "node-remote": "", 
+    "keywords": [], 
+    "devDependencies": {
+        "copyfiles": "^0.2.1", 
+        "autoprefixer": "^5.2.0", 
+        "browserify": "^9.0.8", 
+        "crx": "~3.0.2", 
+        "buildbranch": "0.0.3", 
+        "mkdirp": "^0.5.1", 
+        "opnr": "^1.0.4", 
+        "postcss-import": "^5.2.2", 
+        "postcss-url": "^3.2.0", 
+        "rimraf": "^2.3.4", 
+        "postcss-cli": "^1.3.1", 
+        "brfs": "~1.3.0", 
+        "garnish": "^2.1.3", 
+        "budo": "^4.0.0", 
+        "jstify": "^0.9.0", 
+        "standard": "^4.0.1"
+    }, 
+    "user-agent": "", 
+    "window": {
+        "fullscreen": false, 
+        "kiosk_emulation": false, 
+        "resizable": false, 
+        "show": true, 
+        "always-on-top": false, 
+        "frame": true, 
+        "title": "mapfilter", 
+        "kiosk": false, 
+        "height": 480, 
+        "exe_icon": "", 
+        "visible": true, 
+        "as_desktop": false, 
+        "toolbar": false, 
+        "position": "", 
+        "show_in_taskbar": true, 
+        "mac_icon": "", 
+        "width": 640, 
+        "transparent": false, 
+        "icon": ""
+    }, 
+    "version": "0.2.2", 
+    "inject-js-start": "", 
+    "main": "index.html", 
+    "chromium-args": "", 
+    "webexe_settings": {
+        "linux-x32": false, 
+        "export_dir": "output", 
+        "windows-x64": true, 
+        "download_dir": "/Users/robheittman/Library/Application Support/Web2Executable/files/downloads", 
+        "nw_compression_level": 0, 
+        "mac-x32": false, 
+        "windows-x32": false, 
+        "mac-x64": false, 
+        "nw_version": "0.12.3", 
+        "force_download": false, 
+        "linux-x64": false
+    }, 
+    "description": "An app for viewing monitoring data", 
+    "standard": {
+        "ignore": [
+            "js/lib/**", 
+            "dist/**"
+        ]
+    }, 
+    "dependencies": {
+        "jquery": "^2.1.4", 
+        "octokat": "^0.4.10", 
+        "lodash": "^3.1.0", 
+        "backbone": "^1.1.2", 
+        "leaflet": "^0.7.3", 
+        "crossfilter": "^1.3.11", 
+        "d3": "3"
+    }, 
+    "scripts": {
+        "build:web": "npm run build:dev && npm run build:js", 
+        "prebuild:web": "rimraf dist && mkdirp dist", 
+        "build:chrome": "copyup chrome/* dist && crx pack dist -o dist/mapfilter.crx", 
+        "build:js": "browserify js/index.js -t [ jstify --engine lodash ] | uglifyjs -mc > dist/bundle.js", 
+        "dev": "budo js/index.js:bundle.js --dir dist --live -- -t [ jstify --engine lodash ]", 
+        "patch": "npm version patch && git push --follow-tags", 
+        "start": "npm run build:dev && npm run dev | garnish", 
+        "build:css": "postcss --use postcss-import --use autoprefixer --use postcss-url --postcss-url.url inline css/index.css > dist/bundle.css", 
+        "test": "standard", 
+        "open": "npm run build:dev && npm run dev | opnr | garnish", 
+        "deploy": "buildbranch gh-pages dist", 
+        "build:dev": "copyfiles index.html dist && npm run build:css", 
+        "predeploy": "npm run build:web && copyfiles CNAME dist"
+    }, 
+    "webkit": {
+        "page-cache": false, 
+        "java": false, 
+        "plugin": false
+    }, 
+    "js-flags": "", 
+    "name": "monitoring-app", 
+    "license": "MIT", 
+    "single-instance": true, 
+    "snapshot": "", 
+    "node-main": ""
 }
