--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "buildbranch": "0.0.3",
     "copyfiles": "^0.2.1",
     "crx": "~3.0.2",
+    "ejsify": "0.1.0",
     "garnish": "^2.1.3",
     "jstify": "^0.9.0",
     "mkdirp": "^0.5.1",
     "opnr": "^1.0.4",
+    "packageify": "^0.2.0",
     "postcss-cli": "^1.3.1",
     "postcss-import": "^5.2.2",
     "postcss-url": "^3.2.0",
@@ -22,6 +24,7 @@
     "standard": "^4.0.1"
   },
   "dependencies": {
+    "auth0-lock": "^8.1.2",
     "backbone": "^1.1.2",
     "crossfilter": "^1.3.11",
     "d3": "3",
