--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
     "dev": "budo js/index.js:bundle.js --dir dist --live -- -t [ jstify --engine lodash ]",
     "open": "npm run build:dev && npm run dev | opnr | garnish",
     "start": "npm run build:dev && npm run dev | garnish",
-    "build:dev": "copyfiles index.html dist && npm run build:css",
+    "build:dev": "copyfiles index.html dist && npm run build:css && npm run build:img",
     "build:web": "npm run build:dev && npm run build:js",
     "prebuild:web": "rimraf dist && mkdirp dist",
     "build:css": "postcss --use postcss-import --use autoprefixer --use postcss-url --postcss-url.url inline css/index.css > dist/bundle.css",
     "build:js": "browserify js/index.js -t [ jstify --engine lodash ] | uglifyjs -mc > dist/bundle.js",
+    "build:img": "copyfiles images/* dist",
     "deploy": "buildbranch gh-pages dist",
     "predeploy": "npm run build:web && copyfiles CNAME dist",
     "build:chrome": "copyup chrome/* dist && crx pack dist -o dist/mapfilter.crx",
