--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "dependencies": {
     "backbone": "^1.1.2",
+    "cache-blob-store": "git+https://github.com/digidem/cache-blob-store.git",
     "crossfilter": "^1.3.11",
     "d3": "3",
+    "fix-orientation": "git+https://git@github.com/wehriam/fix-orientation.git",
     "jquery": "^2.1.4",
     "leaflet": "^0.7.3",
     "lodash": "^3.1.0",
