allow configuration of image and timestamp fields

--- a/config.json
+++ b/config.json
@@ -9,7 +9,11 @@
   },
   "localhost": {
     "dataUrl": "https://github.com/digidem/wapichanao-data/tree/master/submissions/monitoring.geojson",
-    "templateUrl": "https://github.com/digidem/wapichanao-data/tree/master/templates/info-pane.tpl",
+    "infoTemplate": {
+      "url": "https://github.com/digidem/wapichanao-data/tree/master/templates/info-pane.tpl",
+      "timestamp": "today",
+      "image": "picture"
+    },
     "auth": true
   }
 }
