--- a/config.json
+++ b/config.json
@@ -8,9 +8,10 @@
     "auth": true
   },
   "localhost": {
-    "dataUrl": "https://github.com/digidem/wapichanao-data/tree/master/submissions/monitoring.geojson",
+    "repository": "github:spacedogxyz/sample-monitoring-data#master",
+    "dataFile": "submissions/monitoring.geojson",
     "infoTemplate": {
-      "url": "https://github.com/digidem/wapichanao-data/tree/master/templates/info-pane.tpl",
+      "file": "templates/info-pane.tpl",
       "timestamp": "today",
       "image": "picture"
     },
