--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "crx": "~3.0.2",
     "ejsify": "0.1.0",
     "garnish": "^2.1.3",
+    "hbsfy": "^2.4.1",
     "jstify": "^0.9.0",
     "mkdirp": "^0.5.1",
     "opnr": "^1.0.4",
