--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
   "dependencies": {
     "auth0-lock": "^8.1.2",
     "backbone": "^1.1.2",
+    "bootstrap": "^3.3.6",
     "crossfilter": "^1.3.11",
     "d3": "3",
     "jquery": "^2.1.4",
+    "json2csv": "^3.0.2",
     "leaflet": "^0.7.3",
     "lodash": "^3.1.0",
     "octokat": "^0.4.10",
