--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cache-blob-store": "git+https://github.com/digidem/cache-blob-store.git",
     "crossfilter": "^1.3.11",
     "d3": "3",
+    "hubfs.js": "^1.0.0",
     "jquery": "^2.1.4",
     "json2csv": "^3.0.2",
     "leaflet": "^0.7.3",
