rewrite initial commit

--- a/package.json
+++ b/package.json
@@ -1,63 +1,63 @@
 {
   "name": "Monitoring-app",
-  "version": "0.2.2",
   "description": "An app for viewing monitoring data",
-  "license": "MIT",
-  "devDependencies": {
-    "autoprefixer": "^5.2.0",
-    "brfs": "~1.3.0",
-    "browserify": "^9.0.8",
-    "budo": "^4.0.0",
-    "buildbranch": "0.0.3",
-    "copyfiles": "^0.2.1",
-    "crx": "~3.0.2",
-    "ejsify": "0.1.0",
-    "garnish": "^2.1.3",
-    "hbsfy": "^2.4.1",
-    "jstify": "^0.9.0",
-    "mkdirp": "^0.5.1",
-    "opnr": "^1.0.4",
-    "packageify": "^0.2.0",
-    "postcss-cli": "^1.3.1",
-    "postcss-import": "^5.2.2",
-    "postcss-url": "^3.2.0",
-    "rimraf": "^2.3.4",
-    "standard": "^4.0.1"
+  "version": "1.0.0-alpha1",
+  "browserify": {
+    "transform": [
+      "babelify",
+      "hbsfy",
+      "browserify-css"
+    ]
   },
   "dependencies": {
-    "auth0-lock": "^8.1.2",
-    "backbone": "^1.1.2",
-    "bootstrap": "^3.3.6",
-    "cache-blob-store": "git+https://github.com/digidem/cache-blob-store.git",
-    "crossfilter": "^1.3.11",
-    "d3": "3",
-    "hubfs.js": "^1.0.0",
-    "jquery": "^2.1.4",
-    "json2csv": "^3.0.2",
-    "leaflet": "^0.7.3",
-    "lodash": "^3.1.0",
-    "octokat": "^0.4.10",
-    "shp-write": "^0.2.1"
+    "feature-filter": "^2.0.1",
+    "geojsonhint": "^1.2.0",
+    "get-value": "^2.0.3",
+    "mapbox-gl": "^0.14.1",
+    "material-ui": "^0.14.4",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-pure-render": "^1.0.2",
+    "react-redux": "^4.4.0",
+    "react-router": "^2.0.0",
+    "react-router-redux": "^4.0.0-rc.1",
+    "react-tap-event-plugin": "^0.2.2",
+    "redux": "^3.3.1",
+    "turf-extent": "^1.0.4"
   },
+  "devDependencies": {
+    "babel-eslint": "^5.0.0",
+    "babel-plugin-react-transform": "^2.0.0",
+    "babel-plugin-transform-class-properties": "^6.5.2",
+    "babel-plugin-transform-object-rest-spread": "^6.5.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
+    "browserify-css": "^0.9.0",
+    "budo": "^8.0.4",
+    "dependency-check": "^2.5.1",
+    "eslint": "^2.1.0",
+    "handlebars": "^4.0.5",
+    "hbsfy": "^2.5.0",
+    "livereactload": "^2.1.1",
+    "prova": "^2.1.2",
+    "react-proxy": "^1.1.2",
+    "standard": "^6.0.5",
+    "tape": "^4.4.0"
+  },
+  "license": "MIT",
   "scripts": {
-    "dev": "budo js/index.js:bundle.js --dir dist --live -- -t [ jstify --engine lodash ]",
-    "open": "npm run build:dev && npm run dev | opnr | garnish",
-    "start": "npm run build:dev && npm run dev | garnish",
-    "build:dev": "copyfiles index.html dist && npm run build:css && npm run build:img",
-    "build:web": "npm run build:dev && npm run build:js",
-    "prebuild:web": "rimraf dist && mkdirp dist",
-    "build:css": "postcss --use postcss-import --use autoprefixer --use postcss-url --postcss-url.url inline css/index.css > dist/bundle.css",
-    "build:js": "browserify js/index.js -t [ jstify --engine lodash ] | uglifyjs -mc > dist/bundle.js",
-    "build:img": "copyfiles images/* dist",
-    "deploy": "buildbranch gh-pages dist",
-    "predeploy": "npm run build:web && copyfiles CNAME dist",
-    "build:chrome": "copyup chrome/* dist && crx pack dist -o dist/mapfilter.crx",
-    "test": "standard",
-    "patch": "npm version patch && git push --follow-tags"
+    "dependency-check": "dependency-check ./package.json && dependency-check ./package.json --unused --no-dev",
+    "lint": "standard",
+    "start": "budo src/index.js:bundle.js --live",
+    "test": "babel-node test/*.test.js",
+    "build": "NODE_ENV=production browserify src/index.js --full-paths -o bundle.js"
   },
   "standard": {
+    "parser": "babel-eslint",
     "ignore": [
-      "js/lib/**",
+      "js/**",
       "dist/**"
     ]
   }
