Create redirects from aliases to specific configs

--- a/package.json
+++ b/package.json
@@ -44,8 +44,9 @@
     "open": "npm run build:dev && npm run dev | opnr | garnish",
     "start": "npm run build:dev && npm run dev | garnish",
     "build:dev": "copyfiles index.html dist && npm run build:css && npm run build:img",
-    "build:web": "npm run build:dev && npm run build:js",
+    "build:web": "npm run build:dev && npm run build:js && npm run build:config",
     "prebuild:web": "rimraf dist && mkdirp dist",
+    "build:config": "node bin/build_config.js",
     "build:css": "postcss --use postcss-import --use autoprefixer --use postcss-url --postcss-url.url inline css/index.css > dist/bundle.css",
     "build:js": "browserify js/index.js -t [ jstify --engine lodash ] | uglifyjs -mc > dist/bundle.js",
     "build:img": "copyfiles images/* dist",
