--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "backbone": "^1.1.2",
     "bootstrap": "^3.3.6",
     "cache-blob-store": "git+https://github.com/digidem/cache-blob-store.git",
+    "collect-stream": "^1.1.1",
     "crossfilter": "^1.3.11",
     "d3": "3",
     "drag-drop": "^2.3.1",
