--- a/package.json
+++ b/package.json
@@ -31,13 +31,18 @@
     "cache-blob-store": "git+https://github.com/digidem/cache-blob-store.git",
     "crossfilter": "^1.3.11",
     "d3": "3",
+    "drag-drop": "^2.3.1",
     "hubfs.js": "^1.0.0",
+    "hyperlog": "^4.9.0",
     "jquery": "^2.1.4",
     "json2csv": "^3.0.2",
     "leaflet": "^0.7.3",
+    "level": "^1.4.0",
     "lodash": "^3.1.0",
+    "mkdirp": "^0.5.1",
     "octokat": "^0.4.10",
-    "shp-write": "^0.2.1"
+    "shp-write": "^0.2.1",
+    "xdg-basedir": "^2.0.0"
   },
   "scripts": {
     "dev": "budo js/index.js:bundle.js --dir dist --live -- -t [ jstify --engine lodash ]",
