--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "crossfilter": "^1.3.11",
     "d3": "3",
     "drag-drop": "^2.3.1",
+    "end-of-stream": "^1.1.0",
     "hubfs.js": "^1.0.0",
     "hyperlog": "^4.9.0",
     "jquery": "^2.1.4",
@@ -42,6 +43,7 @@
     "lodash": "^3.1.0",
     "mkdirp": "^0.5.1",
     "octokat": "^0.4.10",
+    "once": "^1.3.3",
     "shp-write": "^0.2.1",
     "xdg-basedir": "^2.0.0"
   },
