--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "crossfilter": "^1.3.11",
     "d3": "3",
     "drag-drop": "^2.3.1",
+    "ecstatic": "^1.4.0",
     "end-of-stream": "^1.1.0",
     "hubfs.js": "^1.0.0",
     "hyperlog": "^4.9.0",
