--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "copyfiles": "^0.2.1",
     "crx": "~3.0.2",
     "ejsify": "0.1.0",
+    "electron-packager": "^5.2.1",
     "garnish": "^2.1.3",
     "hbsfy": "^2.4.1",
     "jstify": "^0.9.0",
@@ -36,6 +37,7 @@
     "end-of-stream": "^1.1.0",
     "hubfs.js": "^1.0.0",
     "hyperlog": "^4.9.0",
+    "hyperlog-index": "^5.0.3",
     "jquery": "^2.1.4",
     "json2csv": "^3.0.2",
     "leaflet": "^0.7.3",
@@ -43,11 +45,14 @@
     "lodash": "^3.1.0",
     "mkdirp": "^0.5.1",
     "octokat": "^0.4.10",
+    "odk-sync": "^1.0.0",
     "once": "^1.3.3",
     "shp-write": "^0.2.1",
     "xdg-basedir": "^2.0.0"
   },
   "scripts": {
+    "package-win": "rimraf \"dist/Monitoring Station-win32-x64\" && electron-packager . \"Monitoring Station\" --out=dist --ignore=\"^/dist\" --platform=win32 --arch=x64 --version=0.36.9 --overwrite --asar",
+    "package-mac": "rimraf \"dist/Monitoring Station-darwin-x64\" && electron-packager . \"Monitoring Station\" --out=dist --ignore=\"^/dist\" --platform=darwin --arch=x64 --version=0.36.9 --overwrite",
     "dev": "budo js/index.js:bundle.js --dir dist --live -- -t [ jstify --engine lodash ]",
     "open": "npm run build:dev && npm run dev | opnr | garnish",
     "watch": "watchify js/index.js -o dist/bundle.js -t [ jstify --engine lodash ] -dv",
