--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "redbox-react": "^1.2.2",
     "redux": "^3.3.1",
     "round-to": "^1.1.0",
-    "turf-extent": "^1.0.4"
+    "turf-extent": "^1.0.4",
+    "urlsafe-base64": "^1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^5.0.0",
