--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   "scripts": {
     "dependency-check": "dependency-check ./package.json && dependency-check ./package.json --unused --no-dev",
     "lint": "standard",
-    "start": "budo src/index.js:bundle.js -p ${PORT:-9966}",
+    "start": "budo src/index.js:bundle.js",
     "dev": "budo src/dev.js:bundle.js -- -p browserify-hmr",
     "test": "babel-node test/*.test.js",
     "build": "NODE_ENV=production browserify src/index.js --full-paths -o bundle.js"
