--- a/package.json
+++ b/package.json
@@ -16,22 +16,23 @@
     "feature-filter": "^2.0.1",
     "geojsonhint": "^1.2.0",
     "get-value": "^2.0.3",
-    "material-ui": "^0.14.4",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
     "mapbox-gl": "^0.18.0",
+    "material-ui": "^0.15.0",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
     "react-pure-render": "^1.0.2",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
-    "react-router-redux": "^4.0.0-rc.1",
-    "react-tap-event-plugin": "^0.2.2",
+    "react-router-redux": "^4.0.4",
+    "react-tap-event-plugin": "^1.0.0",
     "redbox-react": "^1.2.2",
     "redux": "^3.3.1",
     "round-to": "^1.1.0",
     "turf-extent": "^1.0.4"
   },
   "devDependencies": {
-    "babel-eslint": "^5.0.0",
+    "babel": "^6.5.2",
+    "babel-eslint": "^6.0.0",
     "babel-plugin-react-transform": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.5.2",
     "babel-plugin-transform-object-rest-spread": "^6.5.0",
@@ -43,13 +44,9 @@
     "browserify-hmr": "^0.3.1",
     "budo": "^8.0.4",
     "dependency-check": "^2.5.1",
-    "eslint": "^2.1.0",
     "handlebars": "^4.0.5",
     "hbsfy": "^2.5.0",
-    "livereactload": "^2.1.1",
-    "prova": "^2.1.2",
-    "react-proxy": "^1.1.2",
-    "standard": "^6.0.5",
+    "standard": "^7.0.1",
     "tape": "^4.4.0"
   },
   "license": "MIT",
