--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router": "^2.0.0",
     "react-router-redux": "^4.0.4",
     "react-tap-event-plugin": "^1.0.0",
+    "recompose": "^0.18.0",
     "redbox-react": "^1.2.2",
     "redux": "^3.3.1",
     "round-to": "^1.1.0",
