Re-structure map component & state

--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "base64-url": "^1.2.2",
+    "debug": "^2.2.0",
     "deep-equal": "^1.0.1",
     "feature-filter": "^2.0.1",
     "geojsonhint": "^1.2.0",
     "get-value": "^2.0.3",
     "mapbox-gl": "^0.18.0",
     "material-ui": "^0.15.0",
+    "randombytes": "^2.0.3",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-pure-render": "^1.0.2",
