--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "feature-filter": "^2.0.1",
     "flat": "^2.0.0",
     "geojsonhint": "^1.2.0",
+    "lodash": "^4.12.0",
     "mapbox-gl": "^0.18.0",
     "material-ui": "^0.15.0",
     "randombytes": "^2.0.3",
