--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "redux-thunk": "^2.1.0",
     "reselect": "^2.5.1",
     "round-to": "^1.1.0",
-    "turf-extent": "^1.0.4"
+    "turf-extent": "^1.0.4",
+    "url-regex": "^3.1.1"
   },
   "devDependencies": {
     "babel": "^6.5.2",
