--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "lodash": "^4.12.0",
     "mapbox-gl": "^0.18.0",
     "material-ui": "^0.15.0",
+    "moment": "^2.13.0",
     "randombytes": "^2.0.3",
     "react": "^15.0.2",
+    "react-date-range": "^0.2.4",
     "react-dom": "^15.0.2",
     "react-pure-render": "^1.0.2",
     "react-redux": "^4.4.0",
