--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "transform": [
       "babelify",
       "hbsfy",
-      "browserify-css"
+      "browserify-css",
+      "brfs"
     ]
   },
   "dependencies": {
@@ -48,6 +49,7 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
+    "brfs": "^1.4.3",
     "browserify": "^13.0.0",
     "browserify-css": "^0.9.0",
     "browserify-hmr": "^0.3.1",
