--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
     "material-ui": "^0.15.0",
     "moment": "^2.13.0",
     "randombytes": "^2.0.3",
-    "react": "^15.0.2",
+    "react": "^15.1.0",
+    "react-addons-shallow-compare": "^15.1.0",
     "react-date-range": "^0.2.4",
+    "react-dimensions": "^1.2.0",
     "react-dom": "^15.0.2",
     "react-pure-render": "^1.0.2",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
     "react-router-redux": "^4.0.4",
     "react-tap-event-plugin": "^1.0.0",
+    "react-virtualized": "^7.3.1",
     "recompose": "^0.18.0",
     "redbox-react": "^1.2.2",
     "redux": "^3.3.1",
