--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-date-range": "^0.2.4",
     "react-dimensions": "^1.2.0",
     "react-dom": "^15.0.2",
+    "react-modal": "^1.3.0",
     "react-pure-render": "^1.0.2",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
