--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "brfs": "^1.4.3",
     "browserify": "^13.0.0",
     "browserify-css": "^0.9.0",
-    "browserify-hmr": "^0.3.1",
+    "browserify-hmr": "gmaclennan/browserify-hmr#gmaclennan-patch-1",
     "budo": "^8.0.4",
     "copyfiles": "^0.2.1",
     "dependency-check": "^2.5.1",
