--- a/package.json
+++ b/package.json
@@ -12,37 +12,38 @@
     ]
   },
   "dependencies": {
-    "base64-url": "^1.2.2",
+    "base64-url": "^1.3.3",
     "debug": "^2.2.0",
     "deep-equal": "^1.0.1",
-    "feature-filter": "^2.0.1",
-    "flat": "^2.0.0",
+    "drag-drop": "^2.11.0",
+    "feature-filter": "^2.2.0",
+    "flat": "^2.0.1",
     "geojsonhint": "^1.2.0",
-    "lodash": "^4.12.0",
+    "lodash": "^4.16.4",
     "mapbox-gl": "^0.19.0",
-    "material-ui": "^0.15.0",
-    "moment": "^2.13.0",
+    "material-ui": "^0.16.1",
+    "moment": "^2.15.2",
     "randombytes": "^2.0.3",
-    "react": "^15.1.0",
-    "react-addons-shallow-compare": "^15.1.0",
+    "react": "^15.3.2",
+    "react-addons-shallow-compare": "^15.3.2",
     "react-date-range": "^0.2.4",
-    "react-dimensions": "^1.2.0",
-    "react-dom": "^15.0.2",
-    "react-modal": "^1.3.0",
+    "react-dimensions": "^1.3.0",
+    "react-dom": "^15.3.2",
+    "react-modal": "^1.5.2",
     "react-pure-render": "^1.0.2",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
-    "react-router-redux": "^4.0.4",
+    "react-router-redux": "^4.0.6",
     "react-tap-event-plugin": "^1.0.0",
-    "react-virtualized": "^7.3.1",
-    "recompose": "^0.18.0",
-    "redbox-react": "^1.2.2",
-    "redux": "^3.3.1",
+    "react-virtualized": "^8.2.0",
+    "recompose": "^0.20.2",
+    "redbox-react": "^1.3.2",
+    "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
-    "reselect": "^2.5.1",
+    "reselect": "^2.5.4",
     "round-to": "^1.1.0",
     "turf-extent": "^1.0.4",
-    "url-regex": "^3.1.1"
+    "url-regex": "^3.2.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
@@ -63,7 +64,10 @@
     "gh-pages": "^0.11.0",
     "handlebars": "^4.0.5",
     "hbsfy": "^2.5.0",
-    "standard": "^7.0.1",
+    "mkdirp": "^0.5.1",
+    "spritesmith-cli": "^1.1.2",
+    "spritezero-cli": "^1.0.2",
+    "standard": "^8.5.0",
     "tape": "^4.4.0"
   },
   "license": "MIT",
