--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "react-dimensions": "^1.3.0",
     "react-dom": "^15.3.2",
     "react-modal": "^1.5.2",
+    "react-motion": "^0.4.5",
     "react-pure-render": "^1.0.2",
     "react-redux": "^4.4.0",
-    "react-router": "^2.0.0",
+    "react-router": "^4.0.0-alpha.5",
     "react-router-redux": "^4.0.6",
     "react-tap-event-plugin": "^1.0.0",
     "react-virtualized": "^8.2.0",
@@ -74,7 +75,7 @@
   "scripts": {
     "dependency-check": "dependency-check ./package.json && dependency-check ./package.json --unused --no-dev",
     "lint": "standard",
-    "start": "budo src/index.js:bundle.js",
+    "start": "budo src/index.js:bundle.js --pushstate",
     "dev": "budo src/dev.js:bundle.js -- -p browserify-hmr",
     "test": "exit 0",
     "build": "npm run build:statics && npm run build:js",
