--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "deep-equal": "^1.0.1",
     "drag-drop": "^2.11.0",
     "feature-filter": "^2.2.0",
+    "feature-filter-geojson": "^1.0.0",
     "flat": "^2.0.1",
     "geojsonhint": "^1.2.0",
     "lodash": "^4.16.4",
