--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "feature-filter-geojson": "^1.0.0",
     "flat": "^2.0.1",
     "geojsonhint": "^1.2.0",
+    "get-scrollbar-width": "^1.0.4",
     "lodash": "^4.16.4",
     "mapbox-gl": "^0.19.0",
     "material-ui": "^0.16.1",
@@ -28,7 +29,6 @@
     "react": "^15.3.2",
     "react-addons-shallow-compare": "^15.3.2",
     "react-date-range": "^0.2.4",
-    "react-dimensions": "^1.3.0",
     "react-dom": "^15.3.2",
     "react-modal": "^1.5.2",
     "react-motion": "^0.4.5",
