--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-addons-shallow-compare": "^15.3.2",
     "react-date-range": "^0.2.4",
     "react-dom": "^15.3.2",
+    "react-imageloader": "^2.1.0",
     "react-modal": "^1.5.2",
     "react-motion": "^0.4.5",
     "react-pure-render": "^1.0.2",
