Don’t use black unless it’s the last

--- a/config.json
+++ b/config.json
@@ -11,7 +11,6 @@
   "mapboxToken": "pk.eyJ1IjoiZ21hY2xlbm5hbiIsImEiOiJSaWVtd2lRIn0.ASYMZE2HhwkAw4Vt7SavEg",
   "templates": [],
   "colors": [
-    "#000000",
     "#1f78b4",
     "#33a02c",
     "#6a3d9a",
@@ -23,7 +22,8 @@
     "#fb9a99",
     "#fdbf6f",
     "#ff7f00",
-    "#ffff99"
+    "#ffff99",
+    "#000000"
   ],
   "dateFormatShort": "ll",
   "dateFormatLong": "LL"
