--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "test": "exit 0",
     "build": "npm run build:statics && npm run build:js",
     "build:statics": "copyfiles index.html fonts/* build",
-    "build:js": "NODE_ENV=production browserify -t babelify -t hbsfy -t browserify-css -t envify -t uglifyify src/index.js | uglifyjs -c -m > build/bundle.js"
+    "build:js": "NODE_ENV=production browserify -t babelify -t hbsfy -t browserify-css -t brfs -t envify -t uglifyify src/index.js | uglifyjs -c -m > build/bundle.js"
   },
   "standard": {
     "parser": "babel-eslint",
