--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "react-router": "^4.0.0-alpha.5",
     "react-router-redux": "^4.0.6",
     "react-tap-event-plugin": "^1.0.0",
-    "react-virtualized": "^8.2.0",
+    "react-virtualized": "^8.5.2",
     "recompose": "^0.20.2",
     "redbox-react": "^1.3.2",
     "redux": "^3.6.0",
@@ -84,7 +84,7 @@
     "dependency-check": "dependency-check ./package.json && dependency-check ./package.json --unused --no-dev",
     "lint": "standard",
     "start": "budo src/index.js:bundle.js --pushstate --dir statics",
-    "dev": "budo src/dev.js:bundle.js -- -p browserify-hmr",
+    "dev": "budo src/dev.js:bundle.js --pushstate --dir statics -- -p browserify-hmr",
     "test": "exit 0",
     "build": "npm run build:statics && npm run build:js",
     "build:statics": "copyfiles -u 1 'statics/**/*' build",
