--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mapbox-gl": "^0.27.0",
     "material-ui": "^0.16.4",
     "moment": "^2.15.2",
+    "object-assign": "^4.1.0",
     "randombytes": "^2.0.3",
     "react": "^15.4.0",
     "react-addons-shallow-compare": "^15.3.2",
