Download and use static assets for map style

--- a/package.json
+++ b/package.json
@@ -67,15 +67,21 @@
     "budo": "^8.0.4",
     "copyfiles": "^0.2.1",
     "dependency-check": "^2.5.1",
+    "dotenv": "^2.0.0",
     "envify": "^3.4.1",
     "gh-pages": "^0.11.0",
     "mkdirp": "^0.5.1",
+    "pump": "^1.0.1",
+    "request": "^2.79.0",
+    "rimraf": "^2.5.4",
     "spritesmith-cli": "^1.1.2",
     "spritezero-cli": "^1.0.2",
     "standard": "^8.5.0",
     "tape": "^4.4.0",
+    "traverse": "^0.6.6",
     "uglify-js": "^2.7.4",
-    "uglifyify": "^3.0.4"
+    "uglifyify": "^3.0.4",
+    "urlencode": "^1.1.0"
   },
   "license": "MIT",
   "scripts": {
